# Multi-Robot-Nav

./: .gitignore  README.md  single_robot.rviz  source_workspaces.sh  swarm_slam_arch.md
.devcontainer/: Dockerfile.amd64  Dockerfile.arm64  README.md  devcontainer.json
.devcontainer/generic-amd64/: devcontainer.json
.devcontainer/generic-arm64/: devcontainer.json
.devcontainer/intel-amd64/: devcontainer.json
.devcontainer/intel-arm64/: devcontainer.json
.devcontainer/nvidia-amd64/: devcontainer.json
.devcontainer/nvidia-amd64-external-mnt/: devcontainer.json
.devcontainer/nvidia-arm64/: devcontainer.json
Multi-Robot-Graph-SLAM/src/mrg_slam/: CMakeLists.txt
Multi-Robot-Graph-SLAM/src/mrg_slam/apps/: mrg_slam_component.cpp  (+1 more)
Multi-Robot-Graph-SLAM/src/mrg_slam_msgs/: CMakeLists.txt  package.xml
Multi-Robot-Graph-SLAM/src/mrg_slam_msgs/msg/: EdgeEstimate.msg  EdgeRos.msg  GraphEstimate.msg  GraphRos.msg  KeyFrameEstimate.msg  KeyFrameRos.msg  SlamStatus.msg
Multi-Robot-Graph-SLAM/src/mrg_slam_msgs/srv/: AddStaticKeyFrames.srv  GetGraphUuids.srv  PublishGraph.srv  PublishMap.srv  RemoveEdge.srv  RequestGraphs.srv  SaveGids.srv  SaveGraph.srv  SaveMap.srv
Multi-Robot-Graph-SLAM/src/ndt_omp/: CMakeLists.txt
Swarm-SLAM/docs/architecture/: PROJECT_SUMMARY.md  architecture_overview.md  backend_architecture.md
clearpath/aramis/: robot.srdf  robot.srdf.xacro  robot.urdf.xacro  robot.yaml
clearpath/athos/: robot.srdf  robot.srdf.xacro  robot.urdf.xacro  robot.yaml
clearpath/porthos/: robot.srdf  robot.srdf.xacro  robot.urdf.xacro  robot.yaml
clearpath_ws/reports/artifacts/: server_lidar10_nopc_rerun_rtf_samples.txt  server_lidar10_nopc_rerun_stats.txt  server_lidar10_nopc_rerun_stats_info.txt  server_lidar10_nopc_rerun_summary.txt  server_lidar10_rerun_rtf_samples.txt  server_lidar10_rerun_stats.txt  server_lidar10_rerun_stats_info.txt  server_lidar10_rerun_summary.txt
clearpath_ws/src/clearpath_config/: CHANGELOG.rst  package.xml  setup.py
debug/reports/artifacts/: chibrux_baseline_rerun_stats.txt  profile_chibrux_rerun_2026-03-27.txt  profile_server_prefix_20260327_162441.txt  server_baseline_rerun_stats_info.txt  server_baseline_rerun_summary.txt  server_lidar10_nopc_rerun_rtf_samples.txt  server_lidar10_nopc_rerun_summary.txt  server_lidar10_rerun_rtf_samples.txt  server_lidar10_rerun_stats.txt  server_lidar10_rerun_summary.txt
debug/reports/utils/: camera_turret.urdf.xacro  laser_turret.urdf.xacro  robot.urdf.xacro  robot.yaml  single_robot.rviz
reports/: rtf_lidar_ab_test_2026-03-27.md
reports/artifacts/: chibrux_lidar10_nopc_rerun_stats.txt  chibrux_lidar10_rerun_stats.txt  diagnostics_server_prefix_20260327_162441.txt  profile_server_postfix_20260327_163559.txt  server_baseline_rerun_rtf_samples.txt  server_baseline_rerun_stats.txt  server_lidar10_nopc_rerun_stats.txt
robots/aramis/: robot.yaml
robots/athos/: robot.yaml
robots/michael/: robot.yaml
robots/payloads/: canisters.xacro
robots/porthos/: robot.yaml
robots/r0/: robot.yaml
robots/r1/: robot.yaml
robots/r2/: robot.yaml
tools/benchmark/: collect_machine_profile.sh
workspace/src/cslam_lidar_viz/: package.xml  setup.cfg  setup.py
workspace/src/cslam_lidar_viz/cslam_lidar_viz/: cslam_lidar_visualizer.py
workspace/src/cslam_lidar_viz/launch/: cslam_lidar_visualization.launch.py
workspace/src/cslam_lidar_viz/rviz/: cslam_lidar_visualization.rviz
workspace/src/musketeers_bringup/: CMakeLists.txt  package.xml
workspace/src/musketeers_bringup/config/: cslam_lidar.yaml  fastlio_vlp16_sim.yaml  michael_lidar.yaml  scanmatching.yaml
workspace/src/musketeers_bringup/launch/: lidar_odometry.launch.py  mrg_multi_slam.launch.py  mrg_single_slam.launch.py  multi_fast_lio.launch.py  multi_slam_bringup.launch.py  single_cslam.launch.py  single_fast_lio.launch.py  single_slam_bringup.launch.py  slam_bringup.launch.py  spawn_aramis_athos.launch.py  spawn_musketeers.launch.py  spawn_robot.launch.py  spawn_team.launch.py  spawn_world.launch.py  swarm_multi_slam.launch.py  swarm_single_slam.launch.py  swarm_slam_bringup.launch.py
workspace/src/musketeers_bringup/rviz/: aramis.rviz  mrg_single.rviz  multi_slam.rviz  swarm_single_slam.rviz
workspace/src/slam_evaluation/: package.xml  setup.cfg  setup.py
workspace/src/utils/: package.xml  setup.py
(+195 files in other folders)
