<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>musketeers_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rf.salazarbuttiglione@gmail.com">ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!--Add dependency of clearpath_gz-->
  <exec_depend>clearpath_gz</exec_depend>
  <exec_depend>fast_lio</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>mrg_slam</exec_depend>
  <exec_depend>slam_evaluation</exec_depend>
  <!-- Add dependency of Swarm-SLAM -->
  <exec_depend>cslam</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
